@@ -1,3 +1,9 @@
+2010-12-01  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* config/rs6000/rs6000.c (rs6000_option_override_internal): Fix
+	thinko regarding setting -mno-<xxx> debug switches.
+	(rs6000_rtx_costs): Add FMA.  Delete old rtl based FMA costs.
+
 2010-12-01  Joseph Myers  <joseph@codesourcery.com>
 
 	* intl.c: Don't include tm.h.
